Fix line height on mobile

--- a/src/components/blog.css
+++ b/src/components/blog.css
@@ -1,6 +1,12 @@
 html {
   font-size: 62.5%;
-  line-height: 3rem;
+  line-height: 2.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+  html {
+    line-height: 3rem;
+  }
 }
 
 p,
